# graphix

abgabe/: Lighting.cpp  Makefile
abgabe/models/: ground.blend
abgabe/shaders/: fragmentshader.fs
abgabe/source/: DrawObject.cpp~  DrawObject.hpp~
ex1/: Carousel.c  Makefile  Matrix.c  RotatingCube  RotatingCube.c
ex2/: Interaction  Interaction.c  Makefile  Makefile~  readme.txt
ex2/models/: carousel.mtl  carousel.obj~  cup.blend1  untitled.blend1
ex2/source/: DrawObject.cpp  DrawObject.hpp
ex3/: CMakeLists.txt  Interaction.cpp  Lighting.cpp  Makefile  Makefile~
ex3/models/: carousel.blend  carousel.blend1  sphere.obj~
ex3/shaders/: fragmentshader.fs  vertexshader.vs
ex3/source/: DrawObject.cpp  DrawObject.hpp
ex4/: CMakeLists.txt  Lighting  Lighting.cpp  Makefile  readme.txt
ex4/models/: cup.blend
ex4/shaders/: fragmentshader.fs  lightfragmentshader.fs  lightvertexshader.vs  vertexshader.vs
ex4/source/: DrawObject.cpp  DrawObject.hpp  LoadShader.c  LoadTexture.c  LoadTexture.h  OBJParser.c
